libaio (0.3.110-5) UNRELEASED; urgency=medium

  * Line-wrap and sort debian/control fields.
  * Now using Standards-Version 4.1.1 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Sun, 05 Nov 2017 16:21:26 +0100

libaio (0.3.110-4) unstable; urgency=medium

  * Update upstream URLs to point to pagure.io instead of obsolete
    fedorahosted.org site.
  * Switch to debhelper compatibility level 10.
  * Now using Standards-Version 4.0.1 (no changes needed).
  * Move location of LGPL in Debian systems into a Comment field in
    debian/copyright.
  * Use -a instead of deprecated -s in debhelper commands.

 -- Guillem Jover <guillem@debian.org>  Tue, 08 Aug 2017 00:29:32 +0200

libaio (0.3.110-3) unstable; urgency=medium

  * Use https for hadrons.org and debian.org URLs.
  * Switch debug package to a ddeb.
  * Switch to the dpkg makefile fragments in debian/rules.
  * Enable hardening bindnow feature.
  * Update URL in debian/watch.
  * Fix typos in man pages, reported by lintian.
  * Now using Standards-Version 3.9.8 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Tue, 31 May 2016 20:38:08 +0200

libaio (0.3.110-2) unstable; urgency=medium

  * Use https for the debian/copyright Format URL.
  * Switch Vcs-Browser to a cgit URL.
  * Update Homepage URL to new release site.
    Prompted by Sedat Dilek <sedat.dilek@gmail.com>.
  * Use https in debian/watch URL.
  * Add a small note on each long package description explaining what is
    contained on each package.
  * Document each patch.

 -- Guillem Jover <guillem@debian.org>  Tue, 29 Sep 2015 16:48:30 +0200

libaio (0.3.110-1) unstable; urgency=low

  * New upstream release.
    - Refresh patches.
  * Link against -lc and -Wl,--as-needed so that we pull the required
    fortified functions from the internal libc_nonshared.a, but do not link
    against the shared library because we do not use any of its symbols.
    (Closes: #764509)
  * Switch debian/copyright to machine-readable format 1.0.