@@ -7,6 +7,7 @@ Vcs-Git: https://git.hadrons.org/git/debian/pkgs/libaio.git
 Homepage: https://pagure.io/libaio
 Standards-Version: 4.1.1
 Build-Depends:
+ dpkg-dev (>= 1.19.0),
  debhelper (>= 10),
 
 Package: libaio1
