@@ -7,10 +7,9 @@ DEB_BUILD_MAINT_OPTIONS = hardening=+bindnow
 DEB_CFLAGS_MAINT_PREPEND = -Wall
 
 include /usr/share/dpkg/default.mk
+include /usr/share/dpkg/buildtools.mk
 
-ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
-export CC = $(DEB_HOST_GNU_TYPE)-gcc
-endif
+export CC
 
 lib := libaio1
 libdbg := $(lib)-dbg
